--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,12 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.4</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
