--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
     <include file="../brein-workspace/brein-intellij-workspace/common-libs/ant-util/util-ant.xml"/>
 
     <property name="jarFile" value="brein-time-utilities-TRUNK-SNAPSHOT.jar"/>
+    <property name="testSuite" value="com.brein.time.TestSuite"/>
 
     <target name="03-wrap-up" depends="02-compile-sources">
         <build-jar jarFile="${jarFile}"/>
@@ -22,5 +23,9 @@
 
     <target name="04-publish-results" depends="03-wrap-up">
         <publish-jar jarFile="${jarFile}"/>
+    </target>
+
+    <target name="06-run-test-suite" depends="02-compile-sources">
+        <do-run-test-suite testSuite="${testSuite}"/>
     </target>
 </project>
