--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
     <!-- This is an internally used build-script. To build the project manually,
          please resolve the needed dependencies and run the default javac compiler.
-         In addition, the library will be available through Maven Central!
+         In addition, the library is available through Maven Central!
       -->
     <include file="../brein-workspace/brein-intellij-workspace/common-libs/ant-util/util-ant.xml"/>
 
@@ -23,6 +23,10 @@
 
     <target name="04-publish-results" depends="03-wrap-up">
         <publish-jar jarFile="${jarFile}"/>
+    </target>
+
+    <target name="05-deploy-to-maven" depends="02-compile-sources">
+        <publish-jar-to-central />
     </target>
 
     <target name="06-run-test-suite" depends="02-compile-sources">
