--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>1.3</version>
+            <!-- only used for the viewer's -->
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.6.1</version>
