--- a/build.xml
+++ b/build.xml
@@ -32,4 +32,8 @@
     <target name="06-run-test-suite" depends="02-compile-sources">
         <do-run-test-suite testSuite="${testSuite}"/>
     </target>
+
+    <target name="07-run-sonarqube" depends="02-compile-sources">
+        <do-run-qa-suite />
+    </target>
 </project>
