--- a/pom.xml
+++ b/pom.xml
@@ -137,5 +137,19 @@
             <version>2.13.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.2.4</version>
+        </dependency>
     </dependencies>
 </project>
