--- a/pom.xml
+++ b/pom.xml
@@ -123,12 +123,12 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>2.10.0</version>
-            <type>maven-plugin</type>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.qameta.allure</groupId>-->
+<!--            <artifactId>allure-maven</artifactId>-->
+<!--            <version>2.10.0</version>-->
+<!--            <type>maven-plugin</type>-->
+<!--        </dependency>-->
 
 
         <dependency>
