--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,12 @@
             <version>1.6.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
     </dependencies>
 </project>
