--- a/pom.xml
+++ b/pom.xml
@@ -151,5 +151,11 @@
             <artifactId>mockito-core</artifactId>
             <version>3.2.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.1.0</version>
+        </dependency>
     </dependencies>
 </project>
